# pulse_engage_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/affective_signals/: __init__.py  cli.py  features.py  model.py  preprocessing.py  signals.py
tests/: test_features.py  test_model.py
